created card with modal button

--- a/index.html
+++ b/index.html
@@ -18,10 +18,30 @@
     <header id="hero">
         <div class = "container text-center text-light">
             <h1>Project Tracker</h1>
-            <h2 id="timer"></h1>
+            <h2 id="timer"></h2>
         </div>
     </header>
     <main>
+        <div class="row">
+
+            <div class="card col-4" style="width: 18rem;">
+                <div class="card-header">
+                  Instructions
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Click the link below to open a form and provide information for the following:</li>
+                  <li class="list-group-item">Project Name</li>
+                  <li class="list-group-item">Project Type</li>
+                  <li class="list-group-item">Due Date</li>
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Add Project
+                  </button>
+                </ul>
+              </div>
+
+              
+
+        </div>
     
     </main>
 
