--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <div class="row">
 
-            <div class="card col-4" style="width: 18rem;">
+            <div class="card col-md col-xl-4" style="width: 18rem;">
                 <div class="card-header">
                   Instructions
                 </div>
@@ -37,6 +37,38 @@
                     Add Project
                   </button>
                 </ul>
+              </div>
+
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <div class="mb-3">
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput" class="form-label">Project Name</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+                              </div>
+                              <div class="mb-3">
+                                <label for="formGroupExampleInput2" class="form-label">Project Type</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+                              </div>
+                              <div class="mb-3">
+                                <label for="formGroupExampleInput2" class="form-label">Due Date</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+                              </div>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               
@@ -53,6 +85,12 @@
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
         integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"
+      ></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
